# webway

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.cargo/: config.toml
.changeset/: README.md  config.json  fix-app-token-checkout.md  smooth-jobs-sniff.md  test-changeset-release-workflow.md  test-github-app-token.md
.cursor/: header-gen-testing.mdc
.cursor/rules/: pre-push-checks.mdc  release.mdc
.github/workflows/: bump.yml  ci.yml  prepare-release.yml  release.yml
crates/header-gen/: Cargo.toml
crates/header-gen/src/: config.rs  ir.rs  lib.rs  main.rs  report.rs  type_map.rs
crates/header-gen/src/emitter/: mapping.rs  mod.rs  proto.rs  rust_structs.rs
crates/header-gen/src/parser/: discovery.rs  mod.rs  traversal.rs
crates/header-gen/tests/: emit_test.rs  integration_test.rs  parse_test.rs
crates/header-gen/tests/fixtures/: arrays.h  bitfields.h  enums.h  nested.h  packed.h  simple.h  typedefs.h  unions.h
crates/header-gen/tests/fixtures/multifile/: types.h  uses_types.h
crates/spear-gateway/: Cargo.toml
crates/spear-gateway/src/: main.rs
crates/spear-gen/: Cargo.toml
crates/spear-gen/examples/: alert_roundtrip.rs
crates/spear-gen/src/: main.rs  mapping.rs
crates/spear-gen/src/emitter/: mod.rs  proto.rs  rust.rs
crates/spear-gen/src/parser/: ast.rs  mod.rs
crates/spear-gen/tests/: roundtrip.rs
crates/spear-gen/tests/fixtures/: messages.rs
crates/spear-lib/: Cargo.toml
crates/spear-lib/src/: envelope.rs  lib.rs  publisher.rs  wsdl.rs
docs/: xsd-proto-mapping.md
schemas/synthetic/: alert.xsd  status.xsd  track.xsd
schemas/synthetic/sub/: credentials.xsd
scripts/: build-gen.sh  build-header-gen.sh  build-image.sh  bump-version.sh  changeset-version.sh  sync-cargo-versions.sh  tag-release.sh
