[workspace]
members = [
    "crates/spear-gen",
    "crates/spear-lib",
    "crates/spear-gateway",
    "crates/header-gen",
]
resolver = "2"

[workspace.dependencies]
roxmltree = "0.19"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
prost = "0.12"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clang = "2.0"
tempfile = "3"
