[package]
name = "header-gen"
version = "0.2.24"
edition = "2021"
description = "C header → Rust struct + proto3 + mapping function generator"

[[bin]]
name = "header-gen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
clang = { workspace = true }
clang-sys = { version = "1" }

[dev-dependencies]
tempfile = { workspace = true }
